fix(signup): adds spacing to terms of use button

--- a/src/styles/views/signup.scss
+++ b/src/styles/views/signup.scss
@@ -47,6 +47,12 @@
     }
   }
 
+  .terms {
+    .rt-button-button {
+      margin-left: $margin-tiny;
+    }
+  }
+
   a {
     color: $text-light-primary;
     font-weight: $font-weight-semibold;
